InsuranceOrg/force-app/main/default/objects/vlocity_ins__CachedProduct2Translation__c/vlocity_ins__CachedProduct2Translation__c.object-meta.xml
<CustomObject>
    <description>This object is to store translation of various field of Product2.</description>
    <label>Cached Product Translation</label>
    <nameField>
        <label>Cached Product Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cached Product Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>