InsuranceOrg/force-app/main/default/objects/vlocity_ins__CachedProduct2Translation__c/fields/vlocity_ins__Product2Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Product2Description__c</fullName>
    <description>This field store translated value of Description field of Product2 object.</description>
    <label>Translated Product Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>