InsuranceOrg/force-app/main/default/objects/vlocity_ins__CachedProduct2Translation__c/fields/vlocity_ins__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field store product id.</description>
    <label>Translated Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cached Product Translations</relationshipLabel>
    <relationshipName>Cached_Product2_Translations</relationshipName>
    <type>Lookup</type>
</CustomField>