InsuranceOrg/force-app/main/default/objects/vlocity_ins__CachedProduct2Translation__c/fields/vlocity_ins__Product2Name__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Product2Name__c</fullName>
    <description>This field store translated value of Name field of Product2 object.</description>
    <label>Translated Product Name</label>
    <type>TextArea</type>
</CustomField>